--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chance": "^1.0.3",
     "datauri": "^1.0.4",
     "discord.js": "^8.0.0",
+    "express": "^4.14.0",
     "jsonfile": "^2.3.1",
     "lodash": "^4.13.1",
     "mongodb": "^2.1.18"
