--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   "main": "src/index.js",
   "scripts": {
     "test": "mocha",
-    "start": "node src/index.js",
     "dump_all": "node src/scripts/dump_all.js",
-    "load_all": "node src/scripts/load_all.js"
+    "load_all": "node src/scripts/load_all.js",
+    "build": "webpack --display-error-details --config ./webpack.prod.config.js --progress --colors",
+    "start": "node ./src/index.js"
   },
   "keywords": [
     "discord",
@@ -20,17 +21,43 @@
   "author": "John Helmuth <john@helmuth.org>",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.13.1",
     "bluebird": "^3.4.1",
     "chance": "^1.0.3",
+    "classnames": "^2.2.5",
+    "compression": "^1.6.2",
+    "connect-mongo": "^1.2.1",
     "datauri": "^1.0.4",
     "discord.js": "^8.0.0",
     "express": "^4.14.0",
+    "express-session": "^1.14.0",
     "jsonfile": "^2.3.1",
     "lodash": "^4.13.1",
-    "mongodb": "^2.1.18"
+    "mongodb": "^2.1.18",
+    "passport": "^0.3.2",
+    "passport-discord": "^0.1.1",
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1",
+    "react-router": "^2.6.0"
   },
   "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-cli": "^6.10.1",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
-    "mocha": "^2.5.3"
+    "css-loader": "^0.23.1",
+    "file-loader": "^0.9.0",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
+    "mocha": "^2.5.3",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.1",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.12.1"
   }
 }
