--- a/package.json
+++ b/package.json
@@ -5,14 +5,6 @@
   "engines": {
     "node": "6.3.0"
   },
-  "main": "src/index.js",
-  "scripts": {
-    "test": "mocha",
-    "dump_all": "node src/scripts/dump_all.js",
-    "load_all": "node src/scripts/load_all.js",
-    "build": "webpack --display-error-details --config ./webpack.prod.config.js --progress --colors",
-    "start": "node ./src/index.js"
-  },
   "keywords": [
     "discord",
     "bot",
@@ -34,6 +26,7 @@
     "jsonfile": "^2.3.1",
     "lodash": "^4.13.1",
     "mongodb": "^2.1.18",
+    "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-discord": "^0.1.1",
     "react": "^15.2.1",
@@ -59,5 +52,11 @@
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.12.1"
+  },
+  "main": "src/index.js",
+  "scripts": {
+    "test": "mocha",
+    "build": "webpack --display-error-details --config ./webpack.prod.config.js --progress --colors",
+    "start": "node ./src/index.js"
   }
 }
